--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "autoprefixer": "^10.3.4",
     "next": "11.1.2",
     "postcss": "^8.3.6",
