--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.3.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-insta-stories": "^2.2.3",
     "tailwindcss": "^2.2.9"
   },
   "devDependencies": {
